--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
       <div class="contents">
         <h3>Tools</h3>
         <div class="content-item">
-          <a href="./calculator/calculator_index.html">
+          <a href="calculator/calculator_index.html">
             <img src="images/calculator_image.webp" />
             <p>Calculator</p>
           </a>
         </div>
         <div class="content-item">
-          <a href="./Length Convertor/length_index.html">
+          <a href="Length Convertor/length_index.html">
             <img src="images/length_image.jpg" />
             <p>Length Convertor</p>
           </a>
         </div>
         <div class="content-item">
-          <a href="./Weight Converter/weight_index.html">
+          <a href="Weight Convertor/weight_index.html">
             <img src="images/weight_image.jpg" />
             <p>Weight Convertor</p>
           </a>
