--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
           </a>
         </div>
         <div class="content-item">
-          <a href="Length Convertor/length_index.html">
+          <a href="Length Converter/length_index.html">
             <img src="images/length_image.jpg" />
-            <p>Length Convertor</p>
+            <p>Length Converter</p>
           </a>
         </div>
         <div class="content-item">
-          <a href="Weight Convertor/weight_index.html">
+          <a href="Weight Converter/weight_index.html">
             <img src="images/weight_image.jpg" />
-            <p>Weight Convertor</p>
+            <p>Weight Converter</p>
           </a>
         </div>
       </div>
