--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="content-item">
           <a href="Weight Converter/weight_index.html">
             <img src="images/weight_image.jpg" />
-            <p>Weight Converter</p>
+            <p>HATHI Converter</p>
           </a>
         </div>
       </div>
